--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -1,15 +1,14 @@
 .resumeContainer{
-    min-height: 20cm; 
-    width: inherit; 
+   min-height: 20cm; 
     padding: 10px; 
     border: 3px solid black; 
     overflow-y: hidden;
-    overflow-x: scroll; 
 }
 
 
-@media only screen and (max-width: 1500px){
+/*@media only screen and (max-width: 1500px){
     .resumeContainer{
         min-width: 100%; 
     }
 }
+*/
